[gd_scene load_steps=6 format=3 uid="uid://27dg7fctxwkq"]

[ext_resource type="LabelSettings" uid="uid://bjoqh7ihvn3cg" path="res://Scenes/MainMenu/assets/red_title_small.tres" id="1_mb7aw"]
[ext_resource type="Script" uid="uid://bxubw63uowx5p" path="res://Scenes/GameUi/game_ui.gd" id="1_tt7lr"]
[ext_resource type="LabelSettings" uid="uid://bunhdyeq3a807" path="res://Scenes/MainMenu/assets/white_title.tres" id="2_anb74"]
[ext_resource type="LabelSettings" uid="uid://cqb7voju2ho58" path="res://Scenes/MainMenu/assets/red_title.tres" id="2_anolp"]
[ext_resource type="AudioStream" uid="uid://byaaq7p3wkrfe" path="res://Scenes/GameUi/assets/game_over.wav" id="5_5hvfd"]

[node name="GameUi" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt7lr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 95.0
offset_bottom = 47.0
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14

[node name="highScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0000"
label_settings = ExtResource("1_mb7aw")

[node name="GameOverLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -36.5
offset_right = 191.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = ExtResource("2_anolp")

[node name="PressSpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -32.0
offset_right = 179.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("2_anb74")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-155, 326)
stream = ExtResource("5_5hvfd")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
